// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Set dirty input for a field Set dirty input for a field 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "1",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "1": Object {
    "dirtyInput": false,
    "id": "1",
    "idChildren": Immutable.OrderedSet [
      "2",
    ],
    "idParent": "0",
    "name": "Repeated Short Field",
    "repeated": true,
    "serverType": "Short",
    "typescriptType": null,
  },
  "2": Object {
    "dirtyInput": false,
    "id": "2",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "1",
    "name": "Repeated Short Field",
    "repeated": false,
    "serverType": "Short",
    "typescriptType": "number",
  },
}
`;

exports[`Set dirty input for a field Set dirty input for a nested repeated field 1`] = `
Immutable.OrderedMap {
  "0": Object {
    "dirtyInput": false,
    "id": "0",
    "idChildren": Immutable.OrderedSet [
      "3",
    ],
    "idParent": "0",
    "name": "",
    "repeated": false,
    "serverType": null,
    "typescriptType": null,
  },
  "3": Object {
    "dirtyInput": true,
    "id": "3",
    "idChildren": Immutable.OrderedSet [
      "4",
    ],
    "idParent": "0",
    "name": "Nested Repeated Short Field",
    "repeated": true,
    "serverType": "nestedRepeatedShort",
    "typescriptType": null,
  },
  "4": Object {
    "dirtyInput": true,
    "id": "4",
    "idChildren": Immutable.OrderedSet [
      "5",
    ],
    "idParent": "3",
    "name": "Nested Repeated Short Field",
    "repeated": false,
    "serverType": "nestedRepeatedShort",
    "typescriptType": null,
  },
  "5": Object {
    "dirtyInput": true,
    "id": "5",
    "idChildren": Immutable.OrderedSet [
      "6",
    ],
    "idParent": "4",
    "name": "Nested Short Field",
    "repeated": false,
    "serverType": "repeatedShort",
    "typescriptType": null,
  },
  "6": Object {
    "dirtyInput": false,
    "id": "6",
    "idChildren": Immutable.OrderedSet [
      "7",
    ],
    "idParent": "5",
    "name": "Repeated Short Field",
    "repeated": true,
    "serverType": "Short",
    "typescriptType": null,
  },
  "7": Object {
    "dirtyInput": false,
    "id": "7",
    "idChildren": Immutable.OrderedSet [],
    "idParent": "6",
    "name": "Repeated Short Field",
    "repeated": false,
    "serverType": "Short",
    "typescriptType": "number",
  },
}
`;
